# reflect_and_commit

./: .gitignore  FIRST_REFLECTION.md  README.md  capacitor.config.json  chat3.txt  firebase-messaging-setup.js  index.html  log.txt  package-lock.json  package.json  plan1.txt  starter-tree.txt  style.css  sw.js  syntax.txt  vercel.json
.claude/: launch.json
android/: capacitor.settings.gradle
android/app/: build.gradle  capacitor.build.gradle
api/: schedule.js  send-now.js  send.js  token.js
app/: README.md  firebase-init.js  index.html  landing-preview.html  manifest.json  style.css  sw.js
app/js/: app.js  dsl-editor.js  dsl-graph.js  dsl.js  editor-canvas.js  landing.js  meta-tree.js  node-graph.js  onboarding.js  outcomes-settings.js  pwa-install.js  run-engine.js  screens.js  starter-trees.js  streak.js  tree-editor.js  tree-model.js
docs/: handoff.md  new-plan.md  ui-update-plan.md
hermes_laptop/: chat2.txt  plan.txt
hermes_laptop/brain/: modal_app.py  pyproject.toml
hermes_laptop/brain/src/: __init__.py  cli.py  config.py  models.py  prompts.py  reasoning.py  relay_client.py  state.py  step_runner.py
hermes_laptop/docs/: 0-context.md  1-phase-relay.md
hermes_laptop/relay/: README.md  package.json
hermes_laptop/relay/src/: server.ts  session-manager.ts  types.ts  validate.ts
hermes_laptop/relay/test/: validate.test.ts
install/: index.html
ios/App/App/: Info.plist
js/: app.js  dsl-editor.js  editor-canvas.js  screens.js  tree-model.js
modal_deployment/: .env  app.py  chat.txt
scripts/: package.json  send-notifications.js
(+4 files in other folders)
