[project]
name = "hermes-brain"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7",
  "redis>=5.0",
  "openai>=1.30",
  "websockets>=12.0",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]
modal = ["modal>=0.64"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
